--- a/Echange/WebContent/entry.xhtml
+++ b/Echange/WebContent/entry.xhtml
@@ -6,47 +6,40 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
+	<link rel="stylesheet" type="text/css" href="style.css" />
 	<title>JSF AGP</title>
 </h:head>
 <h:body >
+	
 	<h1>#{msg['label.entry.welcome']}</h1>
 	<p>
-		<strong>#{msg['label.entry.offer']}</strong>
+		<h2>#{msg['label.entry.offer']}</h2>
 	</p>
 	<h:form>
 		#{msg['label.entry.day']} <h:inputText value="#{entryBean.numberDay}"></h:inputText> <br />
 	    #{msg['label.entry.min']} <h:inputText value="#{entryBean.priceMin}"></h:inputText>   <br />
 		#{msg['label.entry.max']} <h:inputText value="#{entryBean.priceMax}"></h:inputText>   <br />
-		#{msg['label.entry.key']} <h:inputText value="#{entryBean.keyword}"></h:inputText>   <br />
+		#{msg['label.entry.key']} <h:inputText value="#{entryBean.keyWord}"></h:inputText>   <br />
+		temps de transport <h:inputText value="#{entryBean.transport}"></h:inputText>   <br />
 		#{msg['label.entry.type']} <h:selectOneMenu value="#{entryBean.type}" 	onchange="submit()">
 			<f:selectItems value="#{entryBean.types}" />
 		</h:selectOneMenu>
 		#{msg['label.entry.intensity']} <h:selectOneMenu value="#{entryBean.intensity}" 	onchange="submit()">
 			<f:selectItems value="#{entryBean.intensities}" />
-		</h:selectOneMenu>
+		</h:selectOneMenu>  <br />
+		<h:commandButton value="#{msg['label.entry.simulate']}" action="#{entryBean.startOffer}"/>
 	</h:form>
-
+	 <br />
 	<p>
-		<strong>#{msg['label.entry.search']}</strong>
+		<h2>#{msg['label.entry.search']}</h2>
 	</p>
-	
-	<p>
-		#{msg['label.entry.search']}
-	</p>
-	<h:form>
-		#{msg['label.entry.type']} <h:selectOneMenu value="#{entryBean.type}" 	onchange="submit()">
-			<f:selectItems value="#{entryBean.types}" />
-		</h:selectOneMenu>	
-		#{msg['label.entry.key']} <h:inputText value="#{entryBean.keyword}"></h:inputText>   <br />
-		
-	</h:form>
 	
 	<h:form>
 		#{msg['label.entry.type']} <h:selectOneMenu value="#{entryBean.type}" 	onchange="submit()">
 			<f:selectItems value="#{entryBean.types}" />
 		</h:selectOneMenu>	
-		#{msg['label.entry.key']} <h:inputText value="#{entryBean.keyword}"></h:inputText>   <br />
-		<h:commandButton value="#{msg['label.entry.simulate']}" action="#{entryBean.queryActivity}"/>
+		#{msg['label.entry.key']} <h:inputText value="#{entryBean.keyWord}"></h:inputText>   <br />
+		<h:commandButton value="Recherche" action="#{entryBean.startSimulation}"/>
 	</h:form>
 	
 </h:body>
