--- a/Echange/WebContent/result.xhtml
+++ b/Echange/WebContent/result.xhtml
@@ -3,16 +3,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	lang="#{localeBean.language}">
-<f:view locale="#{localeBean.locale}" />
+	xmlns:ui="http://java.sun.com/jsf/facelets">
+	
 <h:head>
 	<title>JSF AGP</title>
+		<link rel="stylesheet" type="text/css" href="style2.css" />
 </h:head>
 <h:body >
 	<p>
-		<strong>#{msg['label.entry.welcome']}</strong>
+		<h1>Resultat</h1>
 	</p>
-	
+	<ul>
+    <ui:repeat value="#{resultBean.place}" var="place">
+        <li>
+            <nom> #{place.name} </nom>
+            
+      		<p> Description : #{place.description} </p>
+      		<p> Prix : #{place.entrancePrice} euros </p> <br/>
+        </li>
+    </ui:repeat>
+</ul>
 </h:body>
 </html>
